# routes/settingsManagement.js
@@ -19,30 +19,30 @@ import {
 const router = express.Router();
 
 // GET /categories - Get all categories
-router.get('/', getAllCategories);
+router.get('/category', getAllCategories);
 
 // GET /categories/:id - Get a single category by ID
-router.get('/:id', getCategoryById);
+router.get('/category/:id', getCategoryById);
 
 // POST /categories - Create a new category
-router.post('/', createCategory);
+router.post('/category', createCategory);
 
 // PUT /categories/:id - Update an existing category
-router.put('/:id', updateCategory);
+router.put('/category/:id', updateCategory);
 
 // DELETE /categories/:id - Delete a category
-router.delete('/:id', deleteCategory);
+router.delete('/category/:id', deleteCategory);
 
 
 // GET /project-categories
-router.get('/', getAllProjectCategories);
+router.get('/project-category', getAllProjectCategories);
 
 // POST /project-categories
-router.post('/', createProjectCategory);
+router.post('/project-category', createProjectCategory);
 
 // PUT /project-categories/:id
-router.put('/:id', updateProjectCategory);
+router.put('/project-category/:id', updateProjectCategory);
 
 // DELETE /project-categories/:id
-router.delete('/:id', deleteProjectCategory);
+router.delete('/project-category/:id', deleteProjectCategory);
 export default router;
